--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -22,11 +22,11 @@
                             </li>
                             <li><a href="/service">Service</a>
                             </li>
-                            <li><a href="/solutions/test1">Solution</a>
+                            <li><a href="/business/solution">Business</a>
                                 <ul class="dropdown">
-                                    <li><a href="/solutions/test1">SOLUTION 1</a></li>
-                                    <li><a href="/solutions/test2">SOLUTION 2</a></li>
-                                    <li><a href="/solutions/test3">SOLUTION 3</a></li>
+                                    <li><a href="/business/solution">SOLUTION</a></li>
+                                    <li><a href="/business/service">SERVICE</a></li>
+                                    <li><a href="/business/da-dw-si">DA/DW/SI</a></li>
                                 </ul>
                             </li>
                             <li><a href="/contact">Contact</a>
