feature(index) : update index, contact

--- a/src/main/resources/templates/about.mustache
+++ b/src/main/resources/templates/about.mustache
@@ -163,7 +163,7 @@
                             <h4>본사소재지</h4>
                             <hr>
                         </div>
-                        <p>경기도 안양시 동안구 시민대로 327길 11-41 안양창조경제 융합센터 715호 </p>
+                        <p>경기도 하남시 미사강변한강로 290-3, 230호(망월동, 미사강변도시 C3) </p>
                     </div>
                     <!-- service-icon -->
                 </div>
