--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -86,7 +86,7 @@
                         <li><a href="/">Home</a></li>
                         <li><a href="/about">About</a></li>
                         <li><a href="/service">Service</a></li>
-                        <li><a href="/solutions/test1">Solution</a></li>
+                        <li><a href="/business/solution">Business</a></li>
                         <li><a href="/contact">Contact</a></li>
                     </ul>
                 </div>
